@@ -34,6 +34,7 @@ Version 1.13.0-dev:
      This issue is the source of some difficulties with mp campaigns which occur
      when the campaign is reloaded from a non-host side, or after a player rejoins
      from observer status. Hopefully, reloading campaigns is easier after this.
+   * Fix bug #21797: "Mandatory WML child missing" when leaving a reloaded game.
 
 Version 1.11.11:
  * Add-ons server:
